--- a/views/sold.ejs
+++ b/views/sold.ejs
@@ -34,7 +34,7 @@
                 <header class="invoice-header hospital-header bg-black" id="invo_header">
                     <div class="invoice-logo-content">
                         <div class="invoice-logo">
-                            <a href="/" class="logo"><img src="/assets/images/Invoice/logo.png" width="250" alt="this is a invoice logo"></a>
+                            <a  class="logo"><img src="/assets/images/Invoice/logo.png" width="250" alt="this is a invoice logo"></a>
                         </div>
                     </div>
                 </header>
