--- a/views/confrimationform.ejs
+++ b/views/confrimationform.ejs
@@ -217,6 +217,8 @@
               <option value="">Select Category</option>
               <option value="S">S</option>
               <option value="N">N</option>
+              <option value="No Category">No Category</option>
+
             </select>
           </div>
           <div class="form-group col">
@@ -230,6 +232,8 @@
               <option value="">Select Warranty</option>
               <option value="3 months">3 Months</option>
               <option value="6 months">6 Months</option>
+              <option value="No warranty">No warranty</option>
+
             </select>
           </div>
         </div>
