--- a/views/sold.ejs
+++ b/views/sold.ejs
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <a href="/sold" class="back-btn">Back</a>
     <div class="invoice_wrap hospital-invoice">
         <div class="invoice-container">
