--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
       }
     </style>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="/"
