--- a/views/soldform.ejs
+++ b/views/soldform.ejs
@@ -85,7 +85,7 @@
       </div>
     </nav>
     
-  <body>
+  <body oncontextmenu="return false;">
     <div class="container mt-5">
       <div class="d-flex justify-content-between align-items-center">
         <h2>Customer Details</h2>
