--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,7 @@
         ><img src="assets/images/Invoice/logo.png" alt="Logo"
       /></a>
       <div class="page-title mx-auto">Welcome to Mallu Mechanic.UK</div>
+      <a href="/logout" class="btn btn-danger">Logout</a>
     </nav>
 
     <!-- Centered Buttons -->
