--- a/views/soldform.ejs
+++ b/views/soldform.ejs
@@ -45,6 +45,13 @@
         background-color: #ffc107; /* Hover background color */
         color: #fff; /* Hover text color */
       }
+      .logout-item {
+        background-color: #dc3545; /* Red background for logout */
+        color: white;
+      }
+      .logout-item:hover {
+        background-color: #a71d2a; /* Darker red on hover */
+      }
     </style>
   </head>
   <body>
@@ -81,6 +88,8 @@
         <a class="dropdown-item custom-dropdown-item" href="/Sold"
           >Sold Out Invoice Generator</a
         >
+        <a class="dropdown-item custom-dropdown-item logout-item" href="/logout"
+        >Logout</a>
       </div>
       </div>
     </nav>
