--- a/views/Servicedetails.ejs
+++ b/views/Servicedetails.ejs
@@ -52,6 +52,13 @@
         align-items: center;
         min-height: 60vh; /* Adjust this value as needed */
       }
+      .logout-item {
+        background-color: #dc3545; /* Red background for logout */
+        color: white;
+      }
+      .logout-item:hover {
+        background-color: #a71d2a; /* Darker red on hover */
+      }
     </style>
   </head>
   <body oncontextmenu="return false;">
@@ -90,16 +97,20 @@
           <a class="dropdown-item custom-dropdown-item" href="/Sold"
             >Sold Out Invoice Generator</a
           >
+          <a
+            class="dropdown-item custom-dropdown-item logout-item"
+            href="/logout"
+            >Logout</a
+          >
         </div>
       </div>
-
     </nav>
     <div class="container mt-5">
-        <div class="d-flex justify-content-between align-items-center">
-            <h2 style="visibility: hidden;">Customer Details</h2>
-            <a href="/" class="btn btn-secondary">Back</a>
-        </div>
-        </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <h2 style="visibility: hidden">Customer Details</h2>
+        <a href="/" class="btn btn-secondary">Back</a>
+      </div>
+    </div>
     <!-- Centered iFrame -->
     <div class="iframe-container">
       <iframe
