--- a/views/sold.ejs
+++ b/views/sold.ejs
@@ -158,12 +158,12 @@
                          <p class="company-address style2 text-center" style="font-size: 12px;"><img src="assets/images/Invoice/favicon.png" width="40" height="40">
                             <br>
                             <b>Thanks for choosing Mallu Mechanics. We wish you a safe and happy motoring!🚗  </b><br>
-                            Mallu Mechanics UK Yard,
-                            7 Watson Ave, London E6 2BP, United Kingdom.
+                            <a href="https://maps.app.goo.gl/5SubCbP57jPax4ad6" target="_blank" style="color: #12151C;">Mallu Mechanics UK Yard,
+                            7 Watson Ave, London E6 2BP, United Kingdom.</a>
                          <br>
-                         <a href="tel:+44 7909506380" style="color: #F8BF28;">+44 7909506380</a> | 
-                         <a href="mailto:mallumechanicuk1@gmail.com" style="color: #F8BF28;">mallumechanicuk1@gmail.com</a> | 
-                         <a href="https://mallumechanics.uk/" style="color: #F8BF28;">www.mallumechanics.uk</a><br>
+                         <a href="tel:+44 7909506380" target="_blank" style="color: #F8BF28;">+44 7909506380</a> | 
+                         <a href="mailto:mallumechanicuk1@gmail.com" target="_blank" style="color: #F8BF28;">mallumechanicuk1@gmail.com</a> | 
+                         <a href="https://mallumechanics.uk/" target="_blank" style="color: #F8BF28;">www.mallumechanics.uk</a><br>
                          </p>
                  </div>
                     </div>
@@ -193,7 +193,7 @@
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_5_246)">
                                     <path d="M4 17V19C4 19.5304 4.21071 20.0391 4.58579 20.4142C4.96086 20.7893 5.46957 21 6 21H18C18.5304 21 19.0391 20.7893 19.4142 20.4142C19.7893 20.0391 20 19.5304 20 19V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 11L12 16L17 11" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 4V16" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></g><defs><clipPath id="clip0_5_246"><rect width="24" height="24" fill="white"/></clipPath></defs>
                                 </svg>
-                                <span class="inter-700 medium-font" >Download</span>
+                                <span class="inter-700 medium-font" style="color: #fff;">Download</span>
                             </a>
                         </div>
                         
