--- a/views/soldform.ejs
+++ b/views/soldform.ejs
@@ -54,7 +54,7 @@
       }
     </style>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="/"
