--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/images/favicon/icon.png" />
-    <title>Mallu Mechanic.UK Invoice</title>
+    <title>Mallu Mechanics.UK Invoice</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -44,7 +44,7 @@
         font-weight: 600;
       }
       .btn-custom:hover {
-        background-color: #C37957; /* Slightly different color on hover */
+        background-color: #c37957; /* Slightly different color on hover */
         color: white;
       }
     </style>
@@ -55,16 +55,24 @@
       <a class="navbar-brand" href="/"
         ><img src="assets/images/Invoice/logo.png" alt="Logo"
       /></a>
-      <div class="page-title mx-auto">Welcome to Mallu Mechanic.UK</div>
+      <div class="page-title mx-auto">Welcome to Mallu Mechanics.UK</div>
       <a href="/logout" class="btn btn-danger">Logout</a>
     </nav>
 
     <!-- Centered Buttons -->
     <div class="button-container">
-      <a href="/Customer-Details" class="btn btn-warning btn-custom">Customer Details Form</a>
-      <a href="/Service-Details" class="btn btn-warning btn-custom">Service Details Form</a>
-      <a href="/Booking-Confrimation" class="btn btn-warning btn-custom">Booking Invoice Generator</a>
-      <a href="/Sold" class="btn btn-warning btn-custom">Sold Out Invoice Generator</a>
+      <a href="/Customer-Details" class="btn btn-warning btn-custom"
+        >Customer Details Form</a
+      >
+      <a href="/Service-Details" class="btn btn-warning btn-custom"
+        >Service Details Form</a
+      >
+      <a href="/Booking-Confrimation" class="btn btn-warning btn-custom"
+        >Booking Invoice Generator</a
+      >
+      <a href="/Sold" class="btn btn-warning btn-custom"
+        >Sold Out Invoice Generator</a
+      >
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
